RESOLVED FIXED214907
REGRESSION(r264476): Calling systemHasAC() regresses launch time performance
https://bugs.webkit.org/show_bug.cgi?id=214907
Summary REGRESSION(r264476): Calling systemHasAC() regresses launch time performance
Jer Noble
Reported 2020-07-28 19:28:06 PDT
REGRESSION(r264476): Calling systemHasAC() regresses launch time performance
Attachments
Patch (7.33 KB, patch)
2020-07-28 19:33 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2020-07-28 19:28:39 PDT
Jer Noble
Comment 2 2020-07-28 19:33:28 PDT
Eric Carlson
Comment 3 2020-07-29 09:38:51 PDT
Comment on attachment 405434 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405434&action=review > Source/WebCore/platform/cocoa/PowerSourceNotifier.mm:44 > if (status == NOTIFY_STATUS_OK) > m_tokenID = token; If notify_register_dispatch failed, should this just return early instead of potentially calling notifyPowerSourceChanged()?
Jer Noble
Comment 4 2020-07-29 14:19:02 PDT
(In reply to Eric Carlson from comment #3) > Comment on attachment 405434 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=405434&action=review > > > Source/WebCore/platform/cocoa/PowerSourceNotifier.mm:44 > > if (status == NOTIFY_STATUS_OK) > > m_tokenID = token; > > If notify_register_dispatch failed, should this just return early instead of > potentially calling notifyPowerSourceChanged()? I don't think so. Even if the register command fails, we'll still want to update the AC state next run loop.
EWS
Comment 5 2020-07-29 14:22:48 PDT
Committed r265056: <https://trac.webkit.org/changeset/265056> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405434 [details].
Note You need to log in before you can comment on or make changes to this bug.