REGRESSION(r264476): Calling systemHasAC() regresses launch time performance https://bugs.webkit.org/show_bug.cgi?id=214907 <rdar://problem/66191430>

Reviewed by Eric Carlson.

Source/WebCore:

Because calling into IOPS can block, delay queries about AC state during WebProcessPool creation until
the next run-loop.

Simultaneously, we don't need to check HDR state in the UI process for IOS, so send a default value
there as well.

* platform/cocoa/PowerSourceNotifier.h:
* platform/cocoa/PowerSourceNotifier.mm:
(WebCore::PowerSourceNotifier::PowerSourceNotifier):
* platform/cocoa/SystemBattery.h:
* platform/cocoa/SystemBattery.mm:
(WebCore::cachedSystemHasAC):
* platform/ios/PlatformScreenIOS.mm:
(WebCore::collectScreenProperties):

Source/WebKit:

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):


Canonical link: https://commits.webkit.org/227756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265056 268f45cc-cd09-0410-ab3c-d52691b4dbfc